[gd_scene load_steps=2 format=3 uid="uid://clt3annqddrca"]

[ext_resource type="Script" path="res://adsr_envelope.gd" id="1_dnahn"]

[node name="ADSREnvelope" type="PanelContainer"]
custom_minimum_size = Vector2(0, 150)
offset_right = 76.0
offset_bottom = 150.0
script = ExtResource("1_dnahn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSlider" type="VSlider" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 127.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecaySlider" type="VSlider" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 127.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SustainSlider" type="VSlider" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 127.0
value = 127.0

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReleaseSlider" type="VSlider" parent="HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 127.0
